--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,12 +81,15 @@
 
         <activity
             android:name="com.example.alexlily.chatapp.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name="com.example.alexlily.chatapp.ContactPageActivity"
-            android:label="@string/title_activity_contact_page" >
+            android:label="@string/title_activity_contact_page"
+            >
         </activity>
     </application>
 
 </manifest>
+
+    <!--android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"-->
