--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity
             android:name=".LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="Chat App!"
+            android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -81,11 +81,13 @@
 
         <activity
             android:name="com.example.alexlily.chatapp.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name="com.example.alexlily.chatapp.ContactPageActivity"
             android:label="@string/title_activity_contact_page"
+            android:launchMode="singleTop"
             >
         </activity>
     </application>
